--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/Hariharanerrors/my-chatting-design",
+  "homepage": "https://Hariharanerrors.github.com/my-chatting-design",
   "name": "my-chatting-gpt",
   "version": "0.1.0",
   "private": true,
